removed the fixed countryInput width, it will now be 40% on desktop and 100% on mobile devices.

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -141,4 +141,8 @@ body {
     width: 100%;
     flex: 0 1 100%;
   }
+
+  .inputIconGroup {
+    width: 100%;
+  }
 }
